--- a/css/page2.css
+++ b/css/page2.css
@@ -39,7 +39,7 @@ main {
     margin-right: 3px;
 }
 
-.cube1 {
+/* .cube1 {
 
     margin-left: 250px;
     border: solid 1px black;
@@ -71,12 +71,12 @@ main {
     width: 200px;
     height: 150px;
     display: inline-block;
-}
+} */
 
 header{
     background-color:#E2C2C6 ;
 
-}
+} 
 
 nav {
     
@@ -91,11 +91,30 @@ p {
 text-align: center;
 }
 
-.cube1 {
+/* .cube1 {
     margin-left: 250px;
     border: solid 1px black;
     width: 200px;
     height: 150px;
     display: inline-block;
     margin-top: 100px;
+} */
+
+.cubes {
+    display: grid;
+    grid-template-columns: repeat(3 1fr);
+    grid-template-rows: repeat(3 1fr);
+    height: 40px;
+    width: 700px;
+    gap: 100px;
+    margin: auto;
+}
+
+.cube{
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 350px 350px;
+    border: solid black 1px;
+    height: 100px;
+    width: 200px;
+    gap: 30px;
 }
