--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,10 @@
     border: solid 1px darkblue ;
     height: 75px;
     width: 200px;
-    display: inline-block;
     text-align: center;
     padding-top: 25px;
     font-size: 30px;
-    margin-top: 20px;
-    margin-left: 10px;
+    float: right;
     background-color: #A6CFD5;
 }
 
@@ -15,12 +13,10 @@
     border: solid 1px darkblue ;
     height: 75px;
     width: 200px;
-    display: inline-block;
     text-align: center;
     padding-top: 25px;
     font-size: 30px;
-    margin-left: 500px;
-    margin-top: 20px;
+    float: left;
     background-color: #A6CFD5;
 }
 .button3 {
@@ -31,8 +27,7 @@
     text-align: center;
     padding-top: 25px;
     font-size: 30px;
-    margin-left: 490px;
-    margin-top: 20px;
+    margin-left: 400px;
     background-color: #A6CFD5;
 }
 
@@ -41,20 +36,25 @@ main {
     clear: both;
 background-color: #474973;
 margin-right: 3px;
+height: 700px;
 }
 header {
     font-size: 70px;
     margin-left: 250px;
 }
 
-.img-placeholder {
+img {
     height: 500px;
     width: 400px;
     border: solid black 1px;
-    margin-left: 140px;
     float: left;
 }
 
+.text {
+right: 10px;
+position: absolute;
+width: 780px;
+}
 article {
     width: 700px;
     display: inline-block;
@@ -67,5 +67,5 @@ article {
 p {
 
 font-size: 40px;
-
+float: right;
 }
