--- a/css/page2.css
+++ b/css/page2.css
@@ -1,127 +1,155 @@
-.button1 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    background-color: #474973;
-    margin-right: 350px;
-}
+@media screen and (min-width: 440px) {
 
-.button2 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    margin-right: 298px;
-    background-color: #474973;
-}
-.button3 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
+    .button1 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        background-color: #474973;
+        margin-right: 350px;
+    }
+
+    .button2 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        margin-right: 298px;
+        background-color: #474973;
+    }
+
+    .button3 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+
+        background-color: #474973;
+    }
+
+    .wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 400px);
+        grid-template-rows: repeat(2, 200px);
+        height: 40px;
+        width: 700px;
+        gap: 10px;
+        margin-left: 130px;
+    }
+
+    .cube {
+        grid-template-columns: 100px 100px 100px;
+        grid-template-rows: 350px 350px;
+        border: solid black 1px;
+        height: 100px;
+        width: 200px;
+        gap: 10px;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    .display {
     
-    background-color: #474973;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+    
+    main {
+        margin-top: 50px;
+        clear: both;
+        margin-right: 3px;
+    }
+    
+    
+    .cube>p {
+        font-size: 14px;
+        color: black;
+    }
 }
 
 body {
     width: 1300px;
 }
-main {
-    margin-top: 50px;
-    clear: both;
-    margin-right: 3px;
-}
 
-/* .cube1 {
 
-    margin-left: 250px;
-    border: solid 1px black;
-    width: 200px;
-    height: 150px;
-    display: inline-block;
 
-}
+header {
+    background-color: #E2C2C6;
 
-.cube2{
-    margin-left: 290px;
-    border: solid 1px black;
-    width: 200px;
-    height: 150px ;
-    display: inline-block;
-}
-
-.cube2{
-    margin-left: 270px;
-    border: solid 1px black;
-    width: 200px;
-    height: 150px;
-    display: inline-block;
-}
-
-.cube3{
-    margin-left: 270px;
-    border: solid 1px black;
-    width: 200px;
-    height: 150px;
-    display: inline-block;
-} */
-
-.cube > p {
-    font-size: 14px;
-    color: black;
-}
-header{
-    background-color:#E2C2C6 ;
-
-} 
-
-nav {
-    
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
 }
 
 p {
     font-size: 60px;
     color: #474973;
-text-align: center;
+    text-align: center;
 }
 
-/* .cube1 {
-    margin-left: 250px;
-    border: solid 1px black;
-    width: 200px;
-    height: 150px;
-    display: inline-block;
-    margin-top: 100px;
-} */
+@media screen and (max-width: 440px) {
+    .navigation {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+        height: 30px;
+        color: black;
+        background-color: #474973;
+        border: darkblue;
+        text-align: center;
+    }
 
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 400px);
-    grid-template-rows: repeat(2, 200px);
-    height: 40px;
-    width: 700px;
-    gap: 10px;
-    margin-left: 130px;
+    .block1 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        align-items: left;
+        display: inline-block;
+    }
+    .block2 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+    }
+    .block3 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+
+    }
+
+    .wrapper {
+        display: grid;
+        grid-template-columns: 400px;
+        grid-template-rows: repeat(6, 200px);
+        height: 40px;
+        width: 700px;
+        gap: 10px;
+        margin-left: 130px;
+    }
+    .display {
+        display: none;
+    }
+
+    div {
+        display: block;
+    }
+    body {
+        width: 440px
+    }
 }
 
-.cube{
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 350px 350px;
-    border: solid black 1px;
-    height: 100px;
-    width: 200px;
-    gap: 10px;
-}
+
+
+
