--- a/css/page3.css
+++ b/css/page3.css
@@ -1,76 +1,164 @@
-.button1 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    background-color: #474973;
-    margin-right: 350px;
-}
+@media screen and (min-width: 440px) {
+    .logo {
+        display: none;
+    }
+    .button1 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        background-color: #474973;
+        margin-right: 350px;
+    }
 
-.button2 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    margin-right: 298px;
-    background-color: #474973;
-}
+    .button2 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        margin-right: 298px;
+        background-color: #474973;
+    }
 
-.button3 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    background-color: #474973;
-}
+    .button3 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        background-color: #474973;
+    }
 
-nav {
-    
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-}
+    .blocks {
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
 
 
-img {
-    width: 700px;
-    height: 400px;
-    float: left;
-}
+    .mondriaan {
+        width: 700px;
+        height: 400px;
+        float: left;
+    }
 
-.studie{
-    color: black;
-    font-size: 70px;
-    margin-left: 300px;
+    .studie {
+        color: black;
+        font-size: 70px;
+        margin-left: 300px;
 
-}
-div {
-    background-color: black;
-    height: 600px;
-    width: 1300px;
-}
+    }
 
-.text {
-    margin-right: 30px;
-    color: black;
-    font-size: 30px;
-    float: right;
-    width: 500px;
-}
+    .wrapper {
+        background-color: black;
+        height: 600px;
+        width: 1300px;
+        background-color: #A6CFD5;
+    }
 
-div {
+    .text {
+        margin-right: 30px;
+        color: black;
+        font-size: 30px;
+        float: right;
+        width: 500px;
+    }
+
+    /* div {
     background-color: #A6CFD5;
-}
-body {
-    width: 1000px;
+} */
+    body {
+        width: 1000px;
+    }
+
+    .navigation {
+        display: none;
+    }
 }
 
+@media screen and (max-width: 440px) {
+
+    .navigation {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+        height: 30px;
+        color: black;
+        background-color: #474973;
+        border: darkblue;
+        text-align: center;
+    }
+
+    .block1 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        align-items: left;
+        display: inline-block;
+    }
+
+    .block2 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+    }
+
+    .block3 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+
+    }
+
+    .blocks {
+        display: none;
+    }
+
+    .studie {
+        font-size: 20p;
+        text-align: left;
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .logo {
+        display: block;
+        margin-left: 10px;
+    }
+
+    .text {
+        font-size: 20px;
+        width: 240px;
+        text-align: left;
+        
+    }
+
+    body {
+        width: 440px;
+    }
+
+    .mondriaan {
+        display: none;
+    }
+
+    .text {
+        font-size: 20px;
+        display: block;
+        color: black;
+        text-align: left;
+        margin-right: 1050px;
+    }
+}
