--- a/css/page4.css
+++ b/css/page4.css
@@ -1,4 +1,5 @@
-.button1 {
+@media screen and (min-width: 440px) {
+    .button1 {
     border: solid 1px darkblue ;
     height: 75px;
     width: 200px;
@@ -34,7 +35,7 @@
     background-color: #E2C2C6;
 }
 
-nav {
+.blocks {
     
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -53,4 +54,79 @@ img {
     text-align: center;
     font-size: 20px;
     
+}
+
+.navigation {
+    display: none;
+}
+
+}
+
+@media screen and (max-width: 440px) {
+
+    .blocks {
+        display: none;
+    }
+    .navigation {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+        height: 30px;
+        color: black;
+        background-color: #E2C2C6;
+        border: darkblue;
+        text-align: center;
+    }
+
+    .block1 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        align-items: left;
+        display: inline-block;
+    }
+
+    .block2 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+    }
+
+    .block3 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+
+    }
+
+    .blocks {
+        display: none;
+    }
+
+    img {
+        margin: 0px;
+        margin-left: 25%;
+        
+    }
+
+    .contact {
+        margin: 0px;
+        margin-left: 35%;
+        text-align: left;
+    }
+
+    .content {
+        margin: 0px;
+        text-align: left;
+    }
+
+    .e-mail {
+        margin-left: 45%;
+    }
+
+    .e-mailText {
+        margin-left: 20%;
+    }
 }
