--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,164 @@
-.button1 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    float: right;
-    background-color: #A6CFD5;
+@media screen and (min-width: 440px) {
+
+    header {
+        font-size: 70px;
+        margin-left: 250px;
+    }
+
+    .button1 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        float: right;
+        background-color: #A6CFD5;
+    }
+
+    .button2 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        float: left;
+        background-color: #A6CFD5;
+    }
+
+    .button3 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        margin-left: 400px;
+        background-color: #A6CFD5;
+    }
+
+
+
+    main {
+        margin-top: 110px;
+        clear: both;
+        background-color: #474973;
+   
+        height: 700px;
+    }
+
+    .navigation {
+        display: none;
+    }
+
+    img {
+        height: 500px;
+        width: 400px;
+        border: solid black 1px;
+        float: left;
+    }
+
+    .text {
+        right: 10px;
+        position: absolute;
+        width: 780px;
+    }
+    
+    p {
+    
+        font-size: 40px;
+        float: right;
+    }
+    article {
+        width: 700px;
+        display: inline-block;
+        margin-left: 100px;
+        margin-right: 100px;
+        height: 400;
+        margin-bottom: 100px;
+    }
 }
 
-.button2 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    float: left;
-    background-color: #A6CFD5;
-}
-.button3 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    margin-left: 400px;
-    background-color: #A6CFD5;
-}
 
-main {
-    margin-top: 110px;
-    clear: both;
-background-color: #474973;
-margin-right: 3px;
-height: 700px;
-}
-header {
-    font-size: 70px;
-    margin-left: 250px;
-}
 
-img {
-    height: 500px;
-    width: 400px;
-    border: solid black 1px;
-    float: left;
-}
 
-.text {
-right: 10px;
-position: absolute;
-width: 780px;
-}
-article {
-    width: 700px;
-    display: inline-block;
-    margin-left: 100px;
-    margin-right: 100px;
-    height: 400;
-    margin-bottom: 100px;
-}
 
-p {
 
-font-size: 40px;
-float: right;
+
+
+
+
+
+@media screen and (max-width: 440px) {
+
+    main {
+        height: 400px;
+    }
+    .buttonWrapper {
+    display: none;
+    }
+
+    .img-placeholder {
+        margin-left: 0px;
+
+    }
+    header {
+        font-size: 30px;
+        margin-left: 0px;
+    }
+
+    img {
+        height: 25%;
+        width: 25%;
+        margin-left: 0px;
+        margin-right: 100px;
+    }
+
+    /* .name {
+        margin-left: 0px;
+        margin-right: 210px;
+        font-size: 40px;
+    } */
+    .navigation {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 100%;
+        height: 30px;
+        color: black;
+        background-color: #474973;
+        border: darkblue;
+        text-align: center;
+    }
+    
+    .block1 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        align-items: left;
+        display: inline-block;
+    }
+    .block2 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+    }
+    .block3 {
+        border: solid black 1px;
+        margin-right: 0px;
+        width: 140px;
+        display: inline-block;
+
+    }
+
+    .text {
+        font-size: 20px;
+        width: 240px;
+    }
+
+    body {
+        height: 600px;
+    }
 }
