--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,31 @@
 }
 
 
+.button1 > a {
+    text-decoration: none;
+    color: black;
+}
+.button2 > a {
+    text-decoration: none;
+    color: black;
+}
+.button3 > a {
+    text-decoration: none;
+    color: black;
+}
 
+.block1 > a {
+    text-decoration: none;
+    color: black;
+}
+.block2 > a {
+    text-decoration: none;
+    color: black;
+}
+.block3 > a {
+    text-decoration: none;
+    color: black;
+}
 
 
 
@@ -159,6 +183,6 @@
     }
 
     body {
-        height: 600px;
+        height: 400px;
     }
 }
