--- a/css/page4.css
+++ b/css/page4.css
@@ -1,72 +1,101 @@
 @media screen and (min-width: 440px) {
     .button1 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    background-color: #E2C2C6;
-    margin-right: 350px;
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        background-color: #E2C2C6;
+        margin-right: 350px;
+    }
+
+
+
+    .button2 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+        margin-right: 300px;
+        background-color: #E2C2C6;
+    }
+
+    .button3 {
+        border: solid 1px darkblue;
+        height: 75px;
+        width: 200px;
+        display: inline-block;
+        text-align: center;
+        padding-top: 25px;
+        font-size: 30px;
+
+        background-color: #E2C2C6;
+    }
+
+    .blocks {
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+
+    .contact {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    img {
+        margin-left: 535px;
+    }
+
+    .content {
+        text-align: center;
+        font-size: 20px;
+
+    }
+
+    .navigation {
+        display: none;
+    }
+
 }
 
-.button2 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    margin-right: 300px;
-    background-color: #E2C2C6;
+.button1 > a {
+    text-decoration: none;
+    color: black;
+}
+.button2 > a {
+    text-decoration: none;
+    color: black;
+}
+.button3 > a {
+    text-decoration: none;
+    color: black;
 }
 
-.button3 {
-    border: solid 1px darkblue ;
-    height: 75px;
-    width: 200px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 25px;
-    font-size: 30px;
-    
-    background-color: #E2C2C6;
+.block1 > a {
+    text-decoration: none;
+    color: black;
 }
-
-.blocks {
-    
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+.block2 > a {
+    text-decoration: none;
+    color: black;
 }
-
-.contact {
-    font-size: 40px;
-    text-align: center;
+.block3 > a {
+    text-decoration: none;
+    color: black;
 }
-
-img {
-    margin-left: 535px;
-}
-.content {
-    text-align: center;
-    font-size: 20px;
-    
-}
-
-.navigation {
-    display: none;
-}
-
-}
-
 @media screen and (max-width: 440px) {
 
     .blocks {
         display: none;
     }
+
     .navigation {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -108,7 +137,7 @@ img {
     img {
         margin: 0px;
         margin-left: 25%;
-        
+
     }
 
     .contact {
